sandbox/output
StockProfit.cpp:39:22: error: too many arguments to function call, expected 0, have 1
    if (prices_.size(0 == 0) return;
        ~~~~~~~~~~~~ ^~~~~~
/usr/bin/../lib/gcc/x86_64-linux-gnu/4.8/../../../../include/c++/4.8/bits/stl_vector.h:644:7: note: 'size' declared here
      size_type
      ^
1 error generated.
make: *** [test] Error 1
